...
        viewModelScope.launch {
            Log.d(TAG, "Exporting results to $uri")
            try {
                val result = sectionScoreRepository.fetchFullResults().first()
                importExportService.exportToUri(result, uri)
                Log.d(TAG, "CSV Export complete")
                _snackbarMessage.value = "Export complete"
            } catch (e: Exception) {
                Log.e(TAG, "Failed to export file", e)
                _snackbarMessage.value = "Export failed: ${e.message ?: "Unknown error"}"
            }
        }
    }
...
