...
    onSettings: () -> Unit = {},
    onShowFullList: () -> Unit = {}
) {
    var displayConfirmation by remember { mutableStateOf(false) }
    var menuExpanded by remember { mutableStateOf(false) }

    TopAppBar(title = { Text("Trials Score") },
        actions = {
            IconButton(onClick = { menuExpanded = true }) {
                Icon(
                    imageVector = Icons.Default.MoreVert,
                    contentDescription = stringResource(R.string.more_actions)
                )
...
